--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="showSection('home')">Home</a>
+                        <a class="nav-link active" href="#" onclick="loadHomeSection()">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" onclick="showSection('basics')">Basics</a>
@@ -41,19 +41,8 @@
 
     <div class="container-fluid">
         <div class="row">
-            <!-- Sidebar -->
-            <div class="col-lg-2 d-none d-lg-block bg-light sidebar">
-                <div class="p-3">
-                    <h5>Topics</h5>
-                    <hr>
-                    <ul class="nav flex-column" id="sidebar-nav">
-                        <!-- Dynamically populated by JavaScript -->
-                    </ul>
-                </div>
-            </div>
-
             <!-- Main Content -->
-            <main class="col-lg-10 px-4 py-3" id="main-content">
+            <main class="col-12 px-4 py-3" id="main-content">
                 <!-- Content loaded dynamically by JavaScript -->
             </main>
         </div>
@@ -62,7 +51,7 @@
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
         <div class="container">
-            <p class="mb-0">© <span id="year"></span> C++ Tutorial. All rights reserved.</p>
+            <p class="mb-0">© <span id="year"></span> C++ Tutorial. By Agnaldo Cuchaba, Jhonatan Pereira and Vinicius Lopes.</p>
         </div>
     </footer>
     <script src="script.js"></script>
